--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Hi,
 
-this is a sql file of 'Geographical region and composition of each region' I needed for a project, and it's
-based on this list: http://unstats.un.org/unsd/methods/m49/m49regin.htm 
+this is a sql file of 'Geographical region and composition of each region' based on
+this list: http://unstats.un.org/unsd/methods/m49/m49regin.htm 
 
 Maybe it'll be usefull for somebody out there ;).
 
